apollo-federation/src/connectors/validation/snapshots/validation_tests@uri_templates__valid_connect_absolute_multiline.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/uri_templates/valid_connect_absolute_multiline.graphql
---
[]
